Quorum3/Library/Tests/TypeChecker/Fail/ImpAssignIntegerNumObjWrapped.quorum
class main
    action Main
        Number n
        n:setValue(7.5)
        integer i = n
    end
end